--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ cffi==1.15.1
 charset-normalizer==3.1.0
 cryptography==41.0.1
 Django==4.2.2
+django-admin-thumbnails==0.2.8
+django-session-timeout==0.1.0
 django-storages==1.13.2
 django-widget-tweaks==1.4.12
 gunicorn==20.1.0
